--- a/Rasterizer/Rasterizer.csproj
+++ b/Rasterizer/Rasterizer.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
@@ -10,6 +10,11 @@
     <ItemGroup>
       <PackageReference Include="MathNet.Numerics" Version="5.0.0" />
       <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="CheckerTexture.png" />
+      <None Remove="teapot.obj" />
     </ItemGroup>
 
 </Project>
